--- a/TIL/배열.md
+++ b/TIL/배열.md
@@ -175,3 +175,42 @@ console.log(arr[0] + arr[1]);
 
    >> [3, 5]
    ```
+
+   ***
+
+   `Number.MIN_SAFE_INTEGER` : int 범위 내에서 가장 작은 값
+
+   `Number.MAX_SAFE_INTEGER`
+
+   ```jsx
+   let arr = [-1, -5, -2, -5, -3, -9];
+
+   let maxVal = Number.MIN_SAFE_INTEGER;
+   for (let i = 0; i < 6; i++) {
+       if (arr[i] > maxVal) {
+           maxVal = arr[i];
+       }
+   }
+
+   console.log(maxVal);
+
+   >> -1
+   ```
+
+   `Integer.MIN_VALUE` 는 int로 정의할 수 있는 정수값 중 최솟값을 의미
+
+   ```jsx
+   const INT_MIN = Number.MIN_SAFE_INTEGER;
+   let arr = [-1, -5, -2, -5, -3, -9];
+
+   let maxVal = INT_MIN;
+   for (let i = 0; i < 6; i++) {
+     if (arr[i] > maxVal) {
+       maxVal = arr[i];
+     }
+   }
+
+   console.log(maxVal);
+   ```
+
+   INT*MIN이라는 값은 목적상 변하지 않을, 변해서도 안될 값이기 때문에 이런 경우에는 `const`이라는 키워드를 선언시 적어준다. 또한, 이렇게 값이 변하지 않을 상수 값을 변수로 선언하는 경우에는 변수명을 전부 대문자와 `*`를 사용하여 `INT_MIN` 이런식으로 적어주는 naming convention이 있음!
